corrected mistakes + added letter-spacing

--- a/css/common.css
+++ b/css/common.css
@@ -16,9 +16,14 @@ button {
     cursor: pointer;
 }
 
+address {
+    font-style: normal;
+}
+
 .section-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
+    letter-spacing: 0.02em
 }
