--- a/css/features.css
+++ b/css/features.css
@@ -2,7 +2,9 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 .feature-description {
     color: #434455;
+    letter-spacing: 0.02em;
 }
