--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,10 @@
 .logo {
     text-transform: uppercase;
-    font-family: "Raleway", sens-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.334;
+    letter-spacing: 0.03em;
 }
 
 .logo-accent {
@@ -12,6 +13,7 @@
 
 .menu-link {
     font-weight: 500;
+    letter-spacing: 0.02em;
 }
 
 .menu-link:hover, .menu-link:focus {
@@ -20,6 +22,7 @@
 
 .contacts-link {
     color: #434455;
+    letter-spacing: 0.02em;
 }
 
 .contacts-link:hover, .contacts-link:focus {
