--- a/css/hero.css
+++ b/css/hero.css
@@ -8,12 +8,14 @@
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
+    letter-spacing: 0.02em
 }
 
 .hero-btn {
     background-color: #4D5AE5;
     color: #FFFFFF;
     font-weight: 500;
+    letter-spacing: 0.04em
 }
 
 .hero-btn:hover, .hero-btn:focus {
