--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -2,7 +2,9 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 .portfolio-type {
     color: #434455;
+    letter-spacing: 0.02em;
 }
